--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "apple-music-rpc",
-  "version": "2.2.10",
+  "name": "apple-music-rpc-alpha",
+  "version": "2.2.11-alpha",
   "description": "Discord RPC for iTunes",
   "main": "index.js",
   "scripts": {
