--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/N0chteil-Productions/Apple-Music-RPC.git"
+    "url": "git+https://github.com/ZephraCloud/Apple-Music-RPC-Alpha.git"
   },
   "keywords": [
     "discord",
@@ -19,12 +19,12 @@
     "Apple",
     "Music"
   ],
-  "author": "N0chteil ^^",
+  "author": "zephra",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/N0chteil-Productions/Apple-Music-RPC/issues"
+    "url": "https://github.com/ZephraCloud/Apple-Music-RPC-Alpha/issues"
   },
-  "homepage": "https://github.com/N0chteil-Productions/Apple-Music-RPC#readme",
+  "homepage": "https://github.com/ZephraCloud/Apple-Music-RPC-Alpha#readme",
   "dependencies": {
     "@electron/remote": "^1.2.2",
     "auto-launch": "^5.0.5",
