--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "apple-music-rpc-alpha",
   "version": "2.4.0-alpha",
-  "description": "Discord RPC for iTunes",
+  "description": "Discord RPC for Apple Music",
   "main": "index.js",
   "scripts": {
     "start": "electron .",
@@ -35,7 +35,7 @@
     "fetch": "^1.1.0",
     "fs": "0.0.1-security",
     "http": "0.0.1-security",
-    "itunes-bridge": "^0.6.7",
+    "itunes-bridge": "git+https://github.com/ZephraCloud/iTunes-bridge.git",
     "url": "^0.11.0"
   },
   "devDependencies": {
