--- a/package.json
+++ b/package.json
@@ -28,17 +28,17 @@
   "dependencies": {
     "auto-launch": "^5.0.5",
     "discord-rpc": "^4.0.1",
-    "electron-log": "^4.4.1",
+    "electron-log": "^4.4.4",
     "electron-store": "^8.0.1",
-    "electron-updater": "^4.3.9",
+    "electron-updater": "^4.6.1",
     "fetch": "^1.1.0",
     "fs": "0.0.1-security",
-    "http": "0.0.1-security",
+    "http": "^0.0.1-security",
     "itunes-bridge": "git+https://github.com/ZephraCloud/iTunes-bridge.git",
     "url": "^0.11.0"
   },
   "devDependencies": {
-    "electron": "^13.4.0",
-    "electron-builder": "^22.11.7"
+    "electron": "^16.0.5",
+    "electron-builder": "^22.14.5"
   }
 }
